# fluxlite

./: .gitignore  API.md  LICENSE  README.md  fluxlite.spec  pyproject.toml  requirements.txt
fluxlite/: __init__.py  __main__.py  app.py  commands.py  config.py  console.py  context.py  i18n.py  main.py  mcp_client.py  memory.py  plugin_api.py  plugin_manager.py  profile.py  startup.py  styles.py  wizard.py
fluxlite/provider/: __init__.py  anthropic.py  base.py  openai_compat.py
fluxlite/tools/: browser.py  code_exec.py  code_search.py  file_ops.py  git_ops.py  hooks.py  network.py  planner.py  registry.py  sandbox.py  subagent.py  terminal.py  test_runner.py  web_search.py
tests/: conftest.py  test_config.py  test_context.py  test_file_ops.py  test_memory.py  test_provider.py  test_registry.py
