[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxlite"
version = "0.5.4"
description = "Lightweight terminal-native AI coding agent with plugins, MCP, sandbox, and 34+ built-in tools"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Volsa"}]
keywords = ["cli", "ai", "agent", "llm", "assistant", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "pygments>=2.15.0",
    "tavily-python>=0.3.0",
    "tomli-w>=1.0.0",
    "pyfiglet>=1.0.0",
    "httpx>=0.25.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5.0"]
playwright = ["playwright>=1.40.0"]

[project.urls]
Homepage = "https://github.com/SVolsa/fluxlite"
Repository = "https://github.com/SVolsa/fluxlite"

[project.scripts]
fluxlite = "fluxlite.main:main"

[tool.setuptools.packages.find]
include = ["fluxlite*"]


